--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -10,7 +10,9 @@
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
+</div>
+<div class="row">
+<div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>19:00</td>  <td><a href="https://librarycarpentry.org/lc-shell/">The Unix Shell</a></td> </tr>
@@ -20,6 +22,8 @@
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
   </div>
+</div>
+<div class="row">
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
@@ -30,7 +34,9 @@
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
+</div>
+<div class="row">
+<div class="col-md-6">
     <h3>Day 4</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td><a href="https://librarycarpentry.org/lc-open-refine/">OpenRefine</a></td> </tr>
